--- a/index.html
+++ b/index.html
@@ -16,13 +16,33 @@
     .container {
         display: grid;
         grid-template-rows: 1fr;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
     }
 
     .picture {
-        width: 300px;
+        width: 100%;
+    }
+
+    p {
+        margin-bottom: 0;
+    }
+
+    button {
+        width: 30%;
+        height: 4vh;
+        margin-top: 0.5%;
+        border-radius: 20px;
+        border: none;
+        cursor: pointer;
+        background: rgb(205, 33, 33);
+        color: #000000;
+    }
+
+    @media screen and (max-width: 768px) {
+        .container {
+            grid-template-columns: 1fr;
+        }
     }
 </style>
 
