--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
 </style>
 
 <body>
+    <!-- <form action="">
+        <input class="radio" type="radio" name="test" value="0" />
+        <input class="radio" type="radio" name="test" value="1" />
+        <input class="radio" type="radio" name="test" value="2" />
+        <input class="radio" type="radio" name="test" value="3" />
+        <input class="radio" type="radio" name="test" value="4" />
+        <button type="submit">Нажми меня</button>
+    </form> -->
+
+
 
     <script src="index.js"></script>
 </body>
