css item box margin added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     }
 
+    .item {
+        margin-bottom: 3%;
+    }
+
     .picture {
         width: 100%;
     }
@@ -30,7 +34,7 @@
 
     button {
         width: 30%;
-        height: 4vh;
+        height: 5vh;
         margin-top: 0.5%;
         border-radius: 20px;
         border: none;
